TestSuite/PascalABCTests/errors/err0091.pas
type TClass = final class
procedure Test; abstract;
end;

var t : TClass;

begin
end.